# rese

./: .devcontainer.json.default  .gitignore  Dockerfile  README.md  compose.yaml.default  pyproject.toml
notebook/: data_visualization.ipynb  pred_prot.ipynb
src/common/: utils.py
src/surrogate_modeling/: README.md  datamodule.py  lit_model_utils.py  train.py
src/surrogate_modeling/hydra/: config.yaml
src/surrogate_modeling/hydra/dataset/: mazda-v1.yaml  mazda-v2.yaml
src/surrogate_modeling/hydra/model/: bt.yaml  dol.yaml  don.yaml  dot.yaml  lstm.yaml
src/surrogate_modeling/hydra/settings/: default.yaml
src/surrogate_modeling/model/: BaseTransformer.py  DeepOLSTM.py  DeepONet.py  DeepOTransformer.py  LSTM.py
